ping-pong/pingpong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-deployment
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: dockersifath/pingpong:4.1.1
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
