ping-pong/pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 80
      targetPort: 3001
